# S.O.-Grupo2

./: README.md  iofile.c
Atividade_1/io/: iofile  iofile.c
Atividade_1/process/: fork.c
Atividade_2/: prod_cons.c
Atividade_3/QT/Simulador_Memoria/: .gitignore  CMakeLists.txt  README.md  main.cpp  simulador_memoria.cpp
Atividade_3/QT/Simulador_Memoria/include/: animation.h  defines.h  interpreter.h  memory.h  memory_management.h  process.h  simulador_memoria.h
Atividade_3/QT/Simulador_Memoria/resources/: icons.qrc  operations.txt
Atividade_3/QT/Simulador_Memoria/src/: animation.cpp  interpreter.cpp  main.cpp  memory.cpp  memory_management.cpp  process.cpp  simulador_memoria.cpp
Atividade_3/QT/Simulador_Memoria/ui/: simulador_memoria.ui
cpu-bound/: cpu-bound  cpu-bound.c  main  main.c
io-bound/: iobound.c
ipc/: ipc.c
process/: fork  fork.c  wait  wait.c
